[package]
name = "chainlink_price_ws"
version = "0.1.0"
edition = "2021"
description = "Production WebSocket server streaming Chainlink BTC prices with historical data"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
